add class Ptitle card body

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,21 +2,22 @@ h1 {
     color:#111111;
     text-align: center;
   }
-  div.pink {
-    background-color:pink;
-    margin: 0 auto;
-    width:900;
-}      
-
-div.blue {
- background-color:blue;
- width:800px;
- margin: 0 auto;
+  
+.title {
+       background-color: teal;
+       color: aliceblue;
+       padding: 0vw;
 }
 
-div.red{
-    background-color:red;
-    margin: 0 auto;
-     width:700px;
+.cards {
+       background-color: darkseagreen;
+       padding: 0vmax;
 }
+
+body {
+     background-color: beige;
+}
+
+
+  
 
