--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,21 @@
 h1 {
     color:#111111;
     text-align: center;
+    font-size: larger;
   }
   
 .title {
        background-color: teal;
        color: aliceblue;
-       padding: 0vw;
+       padding: 0vw
+       font-family: monospace;
+       
 }
 
 .cards {
        background-color: darkseagreen;
        padding: 0vmax;
+       font-family: monospace;
 }
 
 body {
