--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,8 @@ body {
      background-color: beige;
 }
 
-.column {
-  width: fit-content;
-  float: unset;
+.box-test {
+  border: tomato;
 }
 
 
